[APPDEV-4058] - Quickshop-to-Reorder Changeover Fixing Production bug with additional whitespace after logo image on welcome.jsp page
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@30467 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/globalnav.css
+++ b/projects/Media/docroot/assets/css/common/globalnav.css
@@ -42,6 +42,7 @@ body{
 }
 
 .globalnav_top a.logo img{
+	display: block;
 	width: 159px;
 	padding-bottom: 9px;
 }
